# layer-gateway-reranker-v1

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-push.yml
app/: build_info.py  main.py
app/api/: __init__.py  rerank.py
app/core/: __init__.py  config.py  conversation.py  logging.py
app/health/: __init__.py  backends.py
app/metrics/: __init__.py  prometheus.py
app/models/: schemas.py
app/proxy/: __init__.py  client.py
app/routing/: __init__.py  selector.py
docs/: conversation-id.md  design.md  docker.md  plan.md  request-response-and-logging.md  run-locally.md  smoke-test.md  status-codes.md
tests/: test_api.py  test_ready_backends.py  test_routing.py  test_version.py
