[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layer-gateway-reranker-v1"
version = "0.1.0"
description = "Request-level routing gateway for reranker workloads."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "prometheus-client",
  "pydantic",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# Prefer the repo's `app` package over any stale copy under `.venv/.../site-packages/`
# (import order differs between `pytest` and `python -m pytest` without this).
pythonpath = ["."]
